--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# monkeytype.com
-userEmail_monkey : "@gmail.com"
-password_monkey :
+userEmail_monkey=your_email@gmail.com
+password_monkey=your_password_here
