--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # monkeytype.com
-userEmail_monkey=email
-password_monkey=password
+userEmail_monkey=@gmail.com
+password_monkey=Password
 
 
 # app.software.com
-userEmail_code_time=email
+userEmail_code_time=@gmail.com
 password_code_time=password
