--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 myenv
 .env
-# trackcoder.xlsx
+trackcoder.xlsx
 ./__pycache__
 __pycache__
 Gchrome/utils/__pycache__
 Gchrome/utils/__pycache__/
 .Gchrome/utils/__pycache__/
 
-# ./trackcoder.xlsx
+./trackcoder.xlsx
